<resources>
    <string name="app_name">澳泉医销网</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--商品规格选择-->
    <string name="comm_price_format">¥ %s</string>

    <string name="product_detail">商品详情</string>
    <string name="product_detail_sku_quantity">购买数量</string>
    <string name="product_detail_sku_confirm">确定</string>
    <string name="product_detail_sku_recommend_price">价格：¥%1$s/%2$s</string>
    <string name="product_detail_sku_stock">(库存:%1$s)</string>
    <string name="product_detail_sku_quantity_over">购买数量超出最大库存，请修改购买数量</string>
    <string name="product_detail_sku_quantity_empty">购买数量不能为空</string>
    <string name="product_detail_sku_add_succeed">商品添加成功，请前往进货单查看</string>
    <string name="title_activity_coupon_list">CouponListActivity</string>

    <string name="shoppingcat">购物车</string>
    <string name="actionBar_edit">编辑</string>
    <string name="all">全选</string>
    <string name="order_total">合计 :</string>
    <!--购物车-->
    <string name="rmb_X">¥&#160;%1$.2f</string>
    <string name="cart">购物车(%1$d)</string>
    <string name="all_select">全选</string>
    <string name="edit_done">完成</string>
    <string name="go_settle_X">去结算(%1$d)</string>
    <string name="go_settle">去结算</string>
    <string name="delete_X">删除(%1$d)</string>
    <string name="total_">合计：</string>
    <string name="edit">编辑</string>
    <string name="normal_tip_X">购物车中有 %1$d 件商品已经降价，快去看看</string>

    <!--登录注册-->
    <string name="login_name">用户登录</string>
    <string name="login_phone">请输入您的用户名/手机号码</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_phone_login">手机验证登录</string>
    <string name="login_forget_pwd">找回密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_third_login">第三方登录</string>
    <string name="login_qq_login">QQ登录</string>
    <string name="login_wechat_login">微信登录</string>
    <string name="register_phone">请输入您的手机号码</string>
    <string name="register_code">请输入手机验证码</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_pwd_">请再次输入密码</string>
    <string name="register_clinic_name">诊所名称</string>
    <string name="register_name">请输入昵称</string>
    <string name="third_login_now">立即登录</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_confirm">确定</string>
    <string name="login_details">为了给您更好的服务，请关联一个澳泉医销网帐号</string>
    <string name="login_register_quick">快速注册</string>
    <string name="login_quick_relevance">立即关联</string>
    <string name="login_relevance">关联</string>
    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <!--图标-->
    <string name="ic_address">&#xe651; </string> <!--未收藏-->
    <string name="ic_eyes">&#xe79f; </string> <!--浏览-->
    <string name="ic_share">&#xe751; </string> <!--分享-->
    <string name="ic_attention">&#xe668; </string> <!--关注-->
    <string name="ic_publish">&#xe649; </string> <!--发布帖子-->
    <string name="ic_time">&#xe7a9; </string> <!--日期图标-->
    <string name="ic_back">&#xe679; </string> <!--返回-->
    <string name="ic_good">&#xe738; </string> <!--已点赞-->
    <string name="ic_isgood">&#xe644; </string> <!--未点赞-->
    <string name="ic_comment">&#xe667; </string> <!--回复-->
    <string name="ic_collect">&#xe64b; </string> <!--收藏-->
    <string name="ic_iscollect">&#xe64c; </string> <!--未收藏-->
    <string name="ic_close">&#xe646; </string> <!--关闭-->
    <string name="ic_time01">&#xe65e; </string> <!--时间-->
    <string name="ic_up_pic">&#xe6be; </string> <!--上传图片-->
    <string name="ic_relevant_users">&#xe703; </string> <!--关联用户-->
    <string name="ic_takephoto">&#xe721; </string> <!--拍照-->
    <string name="ic_video">&#xe7ea; </string> <!--录制视频-->
    <string name="ic_search">&#xe6ac; </string> <!--搜索图标-->
    <string name="ic_report">&#xe845; </string> <!--举报-->
    <string name="ic_video_img">&#xe80a; </string>
    <string name="title_activity_find_search">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string> <!--播放-->


</resources>
