<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.login_register.ThirdLoginFragment">


    <include layout="@layout/common_toolbar"></include>

    <com.likeit.aqe365.view.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/width30"
        android:src="@mipmap/icon_default_picture" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/login_details"
        android:textColor="@color/title_text_color" />

    <com.likeit.aqe365.view.BorderTextView
        android:id="@+id/tv_register_quick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_xxlarge"
        android:layout_marginLeft="@dimen/dip_xxlarge"
        android:layout_marginRight="@dimen/dip_xxlarge"
        android:layout_marginTop="20dip"
        app:contentBackColor="#999999"
        app:strokeColor01="#999999"
        app:strokeWidth01="1dp"
        app:cornerRadius="@dimen/dp_5"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/login_register_quick"
        android:textColor="@color/white" />

    <com.likeit.aqe365.view.BorderTextView
        android:id="@+id/tv_relevance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_xxlarge"
        android:layout_marginBottom="@dimen/width20"
        android:layout_marginLeft="@dimen/dip_xxlarge"
        android:layout_marginRight="@dimen/dip_xxlarge"
        android:layout_marginTop="10dp"
        app:contentBackColor="#999999"
        app:strokeColor01="#999999"
        app:strokeWidth01="1dp"
        app:cornerRadius="@dimen/dp_5"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/login_quick_relevance"
        android:textColor="@color/app_base_color" />
</LinearLayout>
