<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@color/white"
    android:orientation="horizontal">

    <com.likeit.aqe365.view.CircleImageView
        android:id="@+id/iv_img"
        android:layout_width="@dimen/width60"
        android:layout_height="@dimen/width60"
        android:padding="@dimen/dp_5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="xx"
                android:textColor="#444444" />

            <com.likeit.aqe365.view.IconfontTextView
                android:id="@+id/tv_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/ic_report"
                android:textSize="@dimen/txt_22" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="xx"
            android:textColor="#656565" />

        <TextView
            android:id="@+id/tv_huati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="xxx"
            android:textColor="@color/theme_bg_tex" />

        <com.likeit.aqe365.view.NineGridTestLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/layout_nine_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:sapcing="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <com.likeit.aqe365.view.IconfontTextView
                android:id="@+id/tv_iscollect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/ic_iscollect"
                android:textSize="@dimen/txt_16" />

            <com.likeit.aqe365.view.IconfontTextView
                android:id="@+id/tv_likes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ic_isgood"
                android:textSize="@dimen/txt_16" />

            <com.likeit.aqe365.view.IconfontTextView
                android:id="@+id/tv_views"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ic_eyes"
                android:textSize="@dimen/txt_16" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>