<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".activity.login_register.PhoneLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar"></include>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_edittext"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip"
                android:src="@mipmap/icon_login_phone" />


            <EditText
                android:id="@+id/phone_login_et_phone"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dip"
                android:hint="@string/register_phone"
                android:inputType="number"
                android:textColorHint="@color/gray_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="@dimen/width50"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_edittext"
            android:orientation="horizontal"
            android:padding="10dip">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:src="@mipmap/icon_login_code" />

                <EditText
                    android:id="@+id/phone_login_et_code"
                    android:layout_width="0dip"
                    android:layout_height="30dip"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dip"
                    android:hint="@string/register_code"
                    android:inputType="number"
                    android:textColorHint="@color/gray_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/send_code_btn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:layout_weight="2"
                android:background="@drawable/shape_button_blue_border_bg_15"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/login_send_code"
                android:textColor="@color/theme_bg"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="@dimen/width50"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/line"></View>

        <com.likeits.simple.view.BorderTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_xxlarge"
            android:layout_marginLeft="@dimen/dip_xxlarge"
            android:layout_marginRight="@dimen/dip_xxlarge"
            android:layout_marginTop="28dip"
            app:contentBackColor="#999999"
            app:strokeColor01="#999999"
            app:strokeWidth01="1dp"
            app:cornerRadius="@dimen/dp_5"
            android:gravity="center"
            android:padding="8dip"
            android:text="@string/third_login_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_wlt_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/login_third_login"
                android:textColor="@color/register_text_color"
                android:textSize="@dimen/txt_16" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_wlt_color" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_line"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/width30"
                android:drawablePadding="8dp"
                android:drawableTop="@mipmap/icon_login_qq"
                android:text="@string/login_qq_login"
                android:textColor="@color/black_wlt_color" />

            <TextView
                android:id="@+id/login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/width30"
                android:drawablePadding="8dp"
                android:drawableTop="@mipmap/icon_login_weixin"
                android:text="@string/login_wechat_login"
                android:textColor="@color/black_wlt_color" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
